@@ -1,0 +1,4 @@
+2010-09-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* NEWS. Updated with information about the OpenRISC 1000.
+
